implemnten flujobasicsbas